CHANGELOG
=========
3.3-dev
------------------

* [FEATURE] #3926 add preview for imported onlinetext-submissions
* [CHANGED] #3824 show group approval mode elements only when needed


3.2.2 (2016-04-19)
------------------

* [FIXED] #4409 fixed file permission check for one's own files in teamsubmissions for standard group
* [CHANGED] #4276 fix inconsistent plugin naming in english lang strings
* [CHANGED] added local PHPUnit config file


3.2.1 (2016-03-23)
------------------

* [FIXED] #4368 fixed GROUP BY in SQL causing problems with postgres
* [CHANGED] #4292 added missing PHPDoc comments and fixed code checker warnings and unified some duplicated code in a static method
* [CHANGED] fixed .travis.yml to check against MOODLE_32_STABLE


3.2.0 (2016-12-05)
------------------

* Moodle 3.2 compatible version


3.1.1 (2016-12-05)
------------------

* [FEATURE] #3589 Make name and description searchable
* [FEATURE] #3302 add support for importing online-text-submissions (incl. embeded files)
* [FEATURE] #3856 add support for importing team-submissions (incl. online-text- and file-submissions)


3.1.0 (2016-06-22)
------------------

* Moodle 3.1 compatible version
* [FEATURE] #3237 Sync Assignment-Submissions automatically


3.0.1 (2016-06-30)
------------------

* [FIXED] #3315 Typo causing warning about undefined variable


3.0.0 (2016-05-11)
------------------

* Moodle 3.0 compatible version
* [CHANGED] PHP 7 compatibility
* [CHANGED] #3134 Reformatted parts of code (code checker issues)
* [FIXED] #3171 Fix files not being restored correctly


2.9.2 (2016-05-12)
------------------

* [FIXED] #3171 Problems with restored files not being shown


2.9.1 (2016-03-04)
------------------

* [FIXED] #3107 German lang strings


2.9.0 (2016-01-20)
------------------

* Moodle 2.9 compatible version
* [CHANGED] #2495 Replace javascript with AMD modules based on JQuery instead of YUI
* [FIXED] Language strings (fix typos, termini, etc.)